fixed more alignment

--- a/src/App.css
+++ b/src/App.css
@@ -297,6 +297,7 @@ html{
 }
 #clean{
   width:24%;
+  margin-right: 6%;
 }
 .logoimg{
   padding-right: 4%;
